--- a/chat/chat_core/Cargo.toml
+++ b/chat/chat_core/Cargo.toml
@@ -12,9 +12,9 @@ chrono = { workspace = true }
 jwt-simple = { workspace = true }
 serde = { workspace = true }
 sqlx = { workspace = true }
+thiserror = { workspace = true }
 tokio = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true }
 tracing = { workspace = true }
-utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
 uuid = { version = "1.8.0", features = ["v7", "serde"] }
