--- a/chat/chat_core/Cargo.toml
+++ b/chat/chat_core/Cargo.toml
@@ -11,6 +11,7 @@ axum-extra = { workspace = true }
 chrono = { workspace = true }
 jwt-simple = { workspace = true }
 serde = { workspace = true }
+serde_json = "1.0.132"
 sqlx = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
