--- a/chatapp/deny.toml
+++ b/chatapp/deny.toml
@@ -71,7 +71,6 @@ feature-depth = 1
 # output a note when they are encountered.
 ignore = [
   # "RUSTSEC-2023-0071",
-  "RUSTSEC-2024-0320",
   "RUSTSEC-2024-0370",
   #"RUSTSEC-0000-0000",
   #{ id = "RUSTSEC-0000-0000", reason = "you can specify a reason the advisory is ignored" },
@@ -104,6 +103,7 @@ allow = [
   "OpenSSL",
   "Apache-2.0 WITH LLVM-exception",
   "BSL-1.0",
+  "Unicode-3.0",
   #"Apache-2.0 WITH LLVM-exception",
 ]
 # The confidence threshold for detecting a license from license text.
