--- a/chat/chat_server/Cargo.toml
+++ b/chat/chat_server/Cargo.toml
@@ -9,18 +9,19 @@ default = []
 test-util = ["http-body-util", "sqlx-db-tester"]
 
 [dependencies]
+ai_sdk = { version = "0.1.0", path = "../ai_sdk" }
 anyhow = { workspace = true }
 argon2 = { version = "0.5.3", features = ["std"] }
 axum = { workspace = true }
 axum-extra = { workspace = true }
-chrono = { workspace = true }
 chat-core = { workspace = true }
+chrono = { workspace = true }
 hex = "0.4.3"
 http-body-util = { version = "0.1.2", optional = true }
 jwt-simple = { workspace = true }
 mime_guess = "2.0.5"
 serde = { workspace = true }
-serde_json = "1.0.132"
+serde_json = "1.0.128"
 serde_yaml = { workspace = true }
 sha1 = "0.10.6"
 sqlx = { workspace = true }
@@ -31,7 +32,6 @@ tower = { workspace = true }
 tower-http = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-
 
 [dev-dependencies]
 chat-server = { workspace = true, features = ["test-util"] }
